- Implement toggle between ascending and descending sort order on repeated column clicks
- Add comprehensive right-click context menu to cache ListView with Delete, Copy operations, and Select All
- Add Delete key (Del) accelerator for deleting selected cache entries
- Add Ctrl+C accelerator for copying YouTube URL from selected cache entry
- Implement dynamic Edit menu modification when ListView has focus
- Add "Delete", "Copy Title", "Copy Path", and "Copy YouTube URL" to Edit menu for keyboard accessibility
- Enable/disable menu items based on ListView selection state
- Implement ID_LISTVIEW_COPY_TITLE handler to copy video title to clipboard
- Implement ID_LISTVIEW_COPY_PATH handler to copy file path to clipboard
- Implement ID_LISTVIEW_COPY_URL handler to copy reconstructed YouTube URL to clipboard
- Implement ID_LISTVIEW_DELETE handler to trigger delete operation via Delete button
- Fix ListView sorting to use ListView_SortItems for proper lParam handling
- Refactor Select All functionality to use new SelectAllListViewItems helper function

Cache Management:
- Add GetYouTubeUrlFromVideoId helper function to reconstruct YouTube URLs from video IDs
- Add ParseDurationToSeconds helper function to convert MM:SS or HH:MM:SS format to integer seconds
- Implement CompareListViewItems callback for ListView column sorting with thread-safe cache access
- Add SortListViewByColumn function to handle sort state management and ListView sorting
- Add SelectAllListViewItems function for programmatic selection of all ListView items
- Add ListViewSortInfo structure to track sort column, direction, and cache manager reference

HiDPI Support:
- Fix DPI change handling to prevent cumulative scaling errors when moving between monitors
- Replace RescaleWindowForDPI with ResizeControls in WM_DPICHANGED handler for proper layout recalculation
- Remove manual control position scaling that caused layout drift on repeated DPI changes